src/force-app/main/default/objects/Order/fields/IsShipped__c.field-meta.xml
<CustomField>
    <fullName>IsShipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipped</label>
    <type>Checkbox</type>
</CustomField>