src/force-app/main/default/objects/Order/fields/LastStatusChanged__c.field-meta.xml
<CustomField>
    <fullName>LastStatusChanged__c</fullName>
    <label>LastStatusChanged</label>
    <type>DateTime</type>
</CustomField>