src/force-app/main/default/objects/Order/fields/LastStatusChanged_c__c.field-meta.xml
<CustomField>
    <fullName>LastStatusChanged_c__c</fullName>
    <label>Last Status Changed</label>
    <type>DateTime</type>
</CustomField>